--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="en">
+ 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,1000&display=swap" rel="stylesheet"> 
-    <title>Prathi Portfolio</title>
+    <link rel="icon" href="/android-chrome-512x512.png" type="image/png" sizes="512x512"/>
+
+    <title>Prathiba | Portfolio - Software Developer</title>
   </head>
   <body>
     <div id="root"></div>
